<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lbl_Title"
        android:layout_width="304dp"
        android:layout_height="65dp"
        android:fontFamily="monospace"
        android:text="@string/extralingo"
        android:textSize="50sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <ImageView
        android:id="@+id/img_Mascot"
        android:layout_width="163dp"
        android:layout_height="145dp"
        android:contentDescription="@string/extralingo_mascot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162"
        app:srcCompat="@drawable/extralingo_mascot" />

    <Button
        android:id="@+id/btn_menu_signOut"
        android:layout_width="355dp"
        android:layout_height="62dp"
        android:backgroundTint="#FED14A"
        android:fontFamily="monospace"
        android:text="@string/sign_out"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.817" />

    <Button
        android:id="@+id/btn_menu_progress"
        android:layout_width="355dp"
        android:layout_height="62dp"
        android:backgroundTint="#FED14A"
        android:fontFamily="monospace"
        android:text="@string/progress"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529" />

    <Button
        android:id="@+id/btn_menu_account"
        android:layout_width="355dp"
        android:layout_height="62dp"
        android:backgroundTint="#FED14A"
        android:fontFamily="monospace"
        android:text="@string/account"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.668" />

    <Button
        android:id="@+id/btn_menu_lessons"
        android:layout_width="355dp"
        android:layout_height="62dp"
        android:backgroundTint="#FED14A"
        android:fontFamily="monospace"
        android:text="@string/lessons"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388" />

</androidx.constraintlayout.widget.ConstraintLayout>