<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--    TITLE LABEL     -->
    <TextView
        android:id="@+id/lbl_Title"
        android:layout_width="304dp"
        android:layout_height="65dp"
        android:fontFamily="monospace"
        android:text="@string/extralingo"
        android:textSize="50sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

<!--    MASCOT IMAGE    -->

    <!--    USERNAME TEXT FIELD     -->

    <ImageView
        android:id="@+id/img_Mascot"
        android:layout_width="163dp"
        android:layout_height="145dp"
        android:contentDescription="@string/extralingo_mascot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162"
        app:srcCompat="@drawable/extralingo_mascot" />

    <EditText
        android:id="@+id/txt_UsernameInput"
        android:layout_width="231dp"
        android:layout_height="60dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

    <EditText
        android:id="@+id/txt_PasswordInput"
        android:layout_width="231dp"
        android:layout_height="60dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563" />

    <TextView
        android:id="@+id/lbl_Password"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:fontFamily="monospace"
        android:text="@string/password"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.556" />

    <TextView
        android:id="@+id/lbl_Username"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:fontFamily="monospace"
        android:text="@string/username"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.429" />

    <!--    PASSWORD TEXT FIELD      -->

    <!--    PASSWORD LABEL      -->

    <!--    USERNAME LABEL      -->

    <Button
        android:id="@+id/btn_SignInAction"
        android:layout_width="355dp"
        android:layout_height="62dp"
        android:backgroundTint="#FED14A"
        android:fontFamily="monospace"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775" />

    <Button
        android:id="@+id/btn_RegistrationPage"
        android:layout_width="355dp"
        android:layout_height="62dp"
        android:backgroundTint="#FED14A"
        android:fontFamily="monospace"
        android:text="@string/create_an_account"
        android:textStyle="bold"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />

    <TextView
        android:id="@+id/lbl_NoAccount"
        android:layout_width="235dp"
        android:layout_height="31dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/don_t_have_an_account"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844" />

</androidx.constraintlayout.widget.ConstraintLayout>